--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script>
     const CONTRACT_ADDRESS = "0x528C40478b9a0dd180C1DB47141e285fF00c4fCA";
-    const ABI = [[
+    const ABI = [
 	{
 		"inputs": [
 			{
@@ -89,7 +89,7 @@
 		"stateMutability": "nonpayable",
 		"type": "function"
 	}
-]];
+];
 
     let web3, contract, account;
 
