--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h2>USD1 MLM Dashboard</h2>
 
   <div class="card">
+	   <button onclick="connectWallet()">Connect Wallet</button>
     <p><strong>Wallet Address:</strong> <span id="wallet">Not Connected</span></p>
     <p><strong>Total Direct Referrals:</strong> <span id="directs">-</span></p>
     <p><strong>Eligible for Dividend:</strong> <span id="eligible">-</span></p>
